# zlib-bytes

./: .gitignore  CHANGELOG.md  LICENSE  README.md  zlib-bytes.cabal
.github/workflows/: build.yaml
cbits/: hs_zlib.c  hs_zlib.h
example/: decompress  decompress.hs
src/: Zlib.hs
src/Zlib/: Raw.hs
test/: Main.hs  expected-002.txt  input-001.zlib  input-002.zlib  input-003.zlib
