cabal-version:      3.0
name:               zlib-bytes
version:            0.1.0.2
synopsis:           zlib compression bindings
description:        zlib compression bindings.
homepage:           https://github.com/byteverse/zlib-bytes
bug-reports:        https://github.com/byteverse/zlib-bytes/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Eric Demko
maintainer:         amartin@layer3com.com
copyright:          2020 Andrew Martin
category:           Data
build-type:         Simple
extra-source-files:
  cbits/crc32.h
  cbits/deflate.h
  cbits/gzguts.h
  cbits/hs_zlib.h
  cbits/inffast.h
  cbits/inffixed.h
  cbits/inflate.h
  cbits/inftrees.h
  cbits/trees.h
  cbits/zconf.h
  cbits/zlib.h
  cbits/zutil.h
  test/expected-001.txt
  test/expected-002.txt
  test/expected-003.bin
  test/input-001.zlib
  test/input-002.zlib
  test/input-003.zlib

extra-doc-files:
  CHANGELOG.md
  README.md

tested-with:        GHC ==9.4.8 || ==9.6.3 || ==9.8.1

common build-settings
  default-language: Haskell2010
  ghc-options:      -Wall -Wunused-packages

library
  import:          build-settings
  exposed-modules: Zlib
  other-modules:   Zlib.Raw
  build-depends:
    , base          >=4.12  && <5
    , byteslice     >=0.2.8
    , mtl           >=2.2
    , primitive     >=0.7   && <0.10
    , transformers  >=0.6.1

  ghc-options:     -O2
  include-dirs:    cbits
  c-sources:
    cbits/adler32.c
    cbits/compress.c
    cbits/crc32.c
    cbits/deflate.c
    cbits/gzclose.c
    cbits/gzlib.c
    cbits/gzread.c
    cbits/gzwrite.c
    cbits/hs_zlib.c
    cbits/infback.c
    cbits/inffast.c
    cbits/inflate.c
    cbits/inftrees.c
    cbits/trees.c
    cbits/uncompr.c
    cbits/zutil.c

  hs-source-dirs:  src

test-suite test
  import:         build-settings
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  ghc-options:    -O2 -rtsopts -with-rtsopts=-A64K
  build-depends:
    , base        >=4.11.1 && <5
    , byteslice
    , bytestring  >=0.10
    , primitive
    , zlib-bytes

source-repository head
  type:     git
  location: git://github.com/byteverse/zlib-bytes.git
